force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <description>Certifications earned by the dealership.</description>
    <label>Certification</label>
    <nameField>
        <displayFormat>CERT# {000000}</displayFormat>
        <label>Certification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>