force-app/main/default/objects/Certification__c/fields/CertificationExpiryReason__c.field-meta.xml
<CustomField>
    <fullName>CertificationExpiryReason__c</fullName>
    <description>This field captures the reason the certification status is set to &apos;Expired&apos;</description>
    <label>Certification Expiry Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Certification_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Did not Re-Certify within expiration date</fullName>
            </value>
            <value>
                <fullName>Terminated from employment</fullName>
            </value>
            <value>
                <fullName>Did Not Pass Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>