force-app/main/default/objects/Certification__c/fields/Date_Certified__c.field-meta.xml
<CustomField>
    <fullName>Date_Certified__c</fullName>
    <label>Date Certified</label>
    <type>Date</type>
</CustomField>