force-app/main/default/objects/Certification__c/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <description>Dealership that sponsored this Certification</description>
    <inlineHelpText>Dealership that sponsored this Certification</inlineHelpText>
    <label>Dealership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>