force-app/main/default/objects/Certification__c/fields/Dealership_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Number__c</fullName>
    <description>Formula field to show Account number as Dealership Number on certification</description>
    <formula>Dealership__r.AccountNumber</formula>
    <label>Dealership Number</label>
    <type>Text</type>
</CustomField>