force-app/main/default/objects/Certification__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>DATE( (YEAR( Date_Last_Certified__c ) + 2), MONTH(Date_Last_Certified__c ), DAY(Date_Last_Certified__c )  )</formula>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>