force-app/main/default/objects/Certification__c/fields/Final_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Reminder_Date__c</fullName>
    <description>Created for the story #S-506549</description>
    <label>Final Reminder Date</label>
    <type>Date</type>
</CustomField>