force-app/main/default/objects/Certification__c/fields/Final_Reminder_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Final_Reminder_Email_Recipient__c</fullName>
    <description>Created for the story #S-506549</description>
    <label>Final Reminder Email Recipient</label>
    <type>Email</type>
</CustomField>