force-app/main/default/objects/Certification__c/fields/Honda__c.field-meta.xml
<CustomField>
    <fullName>Honda__c</fullName>
    <label>Honda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>