force-app/main/default/objects/Certification__c/fields/Lift_Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Lift_Certification_Type__c</fullName>
    <label>Lift Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>