force-app/main/default/objects/Certification__c/fields/MXV__c.field-meta.xml
<CustomField>
    <fullName>MXV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MXV</label>
    <type>Checkbox</type>
</CustomField>