force-app/main/default/objects/Certification__c/fields/My_Certification__c.field-meta.xml
<CustomField>
    <fullName>My_Certification__c</fullName>
    <description>Formula to evaluate if the certification is related to logged in user</description>
    <formula>$User.ContactId = Technician__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Certification?</label>
    <type>Checkbox</type>
</CustomField>