force-app/main/default/objects/Certification__c/fields/OnsiteTraining__c.field-meta.xml
<CustomField>
    <fullName>OnsiteTraining__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the certification with the onsite training.</description>
    <label>Onsite Training</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Training__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Onsite Training</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Certification Members</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>