force-app/main/default/objects/Certification__c/fields/Pre_Reqs_Met__c.field-meta.xml
<CustomField>
    <fullName>Pre_Reqs_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is selected whenever the Pre-Req criteria are met by the candidate. This field is automatically updated by a process flow.</description>
    <label>Pre Reqs Met</label>
    <type>Checkbox</type>
</CustomField>