force-app/main/default/objects/Certification__c/fields/Pre_Reqs_Met_Formula__c.field-meta.xml
<CustomField>
    <fullName>Pre_Reqs_Met_Formula__c</fullName>
    <formula>IF( 
  OR(
     AND(
       RecordType.Name = &apos;Lift Certification&apos;, 
       ISPICKVAL(NUVL_Lifts__c, &apos;Complete&apos;),
       ISPICKVAL(DPA_Lifts__c, &apos;Complete&apos;),
       ISPICKVAL(Vangater_Lifts__c, &apos;Complete&apos;)
     ),
     AND(
       RecordType.Name = &apos;Van Certification&apos;,
       ISPICKVAL(Dodge_Chrysler__c, &apos;Complete&apos;),
       ISPICKVAL(Honda__c,&apos;Complete&apos;),
       ISPICKVAL(Toyota__c, &apos;Complete&apos;)
     )
  )
  ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Reqs Met(Formula)</label>
    <type>Checkbox</type>
</CustomField>