force-app/main/default/objects/Certification__c/fields/Rear_Entry__c.field-meta.xml
<CustomField>
    <fullName>Rear_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rear_Entry</label>
    <type>Checkbox</type>
</CustomField>