force-app/main/default/objects/Certification__c/fields/Salesperson_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Email_Address__c</fullName>
    <label>Salesperson Email Address</label>
    <type>Email</type>
</CustomField>