force-app/main/default/objects/Certification__c/fields/Technician_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Technician_Email_Address__c</fullName>
    <formula>Technician__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Email Address</label>
    <type>Text</type>
</CustomField>