force-app/main/default/objects/Certification__c/fields/Trainee_Type__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Type__c</fullName>
    <defaultValue>IF( 
OR ($RecordType.Name = &quot;AbilityPro Bootcamp&quot;,$RecordType.Name  = &quot;AbilityPro Live&quot;, $RecordType.Name  = &quot;AbilityPro Online&quot;), &quot;Salesperson&quot;, &quot;Technician&quot;)</defaultValue>
    <label>Trainee Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>