force-app/main/default/objects/Certification__c/fields/X30_Day_Reminder_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>X30_Day_Reminder_Email_Recipient__c</fullName>
    <description>Created for Story #S-506549</description>
    <label>30 Day Reminder Email Recipient</label>
    <type>Email</type>
</CustomField>