force-app/main/default/objects/Certification__c/fields/X60_Day_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>X60_Day_Reminder_Date__c</fullName>
    <description>Created for the story #S-506549</description>
    <label>60 Day Reminder Date</label>
    <type>Date</type>
</CustomField>