force-app/main/default/objects/Certification__c/fields/X60_Day_Reminder_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>X60_Day_Reminder_Email_Recipient__c</fullName>
    <description>Created for story #S-506549</description>
    <label>60 Day Reminder Email Recipient</label>
    <type>Email</type>
</CustomField>