force-app/main/default/objects/Certification__c/recordTypes/AbilityPro_Bootcamp.recordType-meta.xml
<RecordType>
    <fullName>AbilityPro_Bootcamp</fullName>
    <active>true</active>
    <label>AbilityPro Bootcamp</label>
</RecordType>