force-app/main/default/objects/Certification__c/recordTypes/AbilityPro_Live.recordType-meta.xml
<RecordType>
    <fullName>AbilityPro_Live</fullName>
    <active>true</active>
    <label>AbilityPro Live</label>
</RecordType>