force-app/main/default/objects/Certification__c/recordTypes/AbilityPro_Online.recordType-meta.xml
<RecordType>
    <fullName>AbilityPro_Online</fullName>
    <active>true</active>
    <label>AbilityPro Online</label>
</RecordType>