force-app/main/default/objects/Certification__c/recordTypes/B_D_Full_Size_Van_Transfer_Seat_Base_Certification.recordType-meta.xml
<RecordType>
    <fullName>B_D_Full_Size_Van_Transfer_Seat_Base_Certification</fullName>
    <active>true</active>
    <label>B&amp;D Full Size Van Transfer Seat Base Certification</label>
</RecordType>