force-app/main/default/objects/Certification__c/recordTypes/B_D_HighTower_Certification.recordType-meta.xml
<RecordType>
    <fullName>B_D_HighTower_Certification</fullName>
    <active>true</active>
    <label>B&amp;D HighTower Certification</label>
</RecordType>