force-app/main/default/objects/Certification__c/recordTypes/B_D_Minivan_Transfer_Seat_Base_Certification.recordType-meta.xml
<RecordType>
    <fullName>B_D_Minivan_Transfer_Seat_Base_Certification</fullName>
    <active>true</active>
    <label>B&amp;D Minivan Transfer Seat Base Certification</label>
</RecordType>