force-app/main/default/objects/Certification__c/recordTypes/Dealer_Service_Performance_Advisor_Sales_Training.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Service_Performance_Advisor_Sales_Training</fullName>
    <active>true</active>
    <label>Dealer Service Performance - Advisor Sales Training</label>
</RecordType>