force-app/main/default/objects/Certification__c/recordTypes/Dealer_Service_Performance_Leadership_Management.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Service_Performance_Leadership_Management</fullName>
    <active>true</active>
    <label>Dealer Service Performance - Leadership &amp; Management</label>
</RecordType>