force-app/main/default/objects/Certification__c/recordTypes/Dealer_Service_Performance_Tech_Advisor_Communication.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Service_Performance_Tech_Advisor_Communication</fullName>
    <active>true</active>
    <label>Dealer Service Performance - Tech &amp; Advisor Communication</label>
</RecordType>