force-app/main/default/objects/Certification__c/recordTypes/DPA_Lift_Certification.recordType-meta.xml
<RecordType>
    <fullName>DPA_Lift_Certification</fullName>
    <active>true</active>
    <description>DPA Lift Only Online</description>
    <label>DPA Lift Certification</label>
</RecordType>