force-app/main/default/objects/Certification__c/recordTypes/ECOA_Training.recordType-meta.xml
<RecordType>
    <fullName>ECOA_Training</fullName>
    <active>true</active>
    <label>ECOA Training</label>
</RecordType>