force-app/main/default/objects/Certification__c/recordTypes/Lift_Certification.recordType-meta.xml
<RecordType>
    <fullName>Lift_Certification</fullName>
    <active>true</active>
    <label>Lift Certification</label>
</RecordType>