force-app/main/default/objects/Certification__c/recordTypes/Service_Account.recordType-meta.xml
<RecordType>
    <fullName>Service_Account</fullName>
    <active>true</active>
    <label>Service Account</label>
</RecordType>