force-app/main/default/objects/Certification__c/recordTypes/Turny_Evo_Sales_Certification.recordType-meta.xml
<RecordType>
    <fullName>Turny_Evo_Sales_Certification</fullName>
    <active>true</active>
    <label>Turny Evo Sales Certification</label>
</RecordType>