force-app/main/default/objects/Certification__c/recordTypes/Turny_Evo_Service_Certification.recordType-meta.xml
<RecordType>
    <fullName>Turny_Evo_Service_Certification</fullName>
    <active>true</active>
    <label>Turny Evo Service Certification</label>
</RecordType>