force-app/main/default/objects/Certification__c/recordTypes/Vehicle_Certification.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Certification</fullName>
    <active>true</active>
    <description>Vehicle Certification Record type</description>
    <label>Vehicle Certification</label>
</RecordType>