force-app/main/default/objects/Certification__c/listViews/All_Certifications.listView-meta.xml
<ListView>
    <fullName>All_Certifications</fullName>
    <columns>NAME</columns>
    <columns>Technician__c</columns>
    <columns>Dealership__c</columns>
    <columns>Dealership_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Certification_Status__c</columns>
    <columns>Date_Certified__c</columns>
    <columns>Date_Last_Certified__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Certifications</label>
</ListView>