force-app/main/default/objects/Certification__c/listViews/Copy_of_All_Certifications.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Certifications</fullName>
    <columns>NAME</columns>
    <columns>Technician__c</columns>
    <columns>Dealership__c</columns>
    <columns>Dealership_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Certification_Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Certification__c.Lift_Certification,Certification__c.Turny_Evo_Sales_Certification,Certification__c.Turny_Evo_Service_Certification,Certification__c.Vehicle_Certification</value>
    </filters>
    <label>Copy of All Certifications</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>