force-app/main/default/objects/Certification__c/listViews/My_Certifications.listView-meta.xml
<ListView>
    <fullName>My_Certifications</fullName>
    <columns>NAME</columns>
    <columns>Dealership__c</columns>
    <columns>Dealership_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Certification_Status__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Certification__c.Lift_Certification,Certification__c.Vehicle_Certification</value>
    </filters>
    <filters>
        <field>My_Certification__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Certifications</label>
</ListView>