force-app/main/default/objects/Certification__c/listViews/Turny_Evo_Certificiations.listView-meta.xml
<ListView>
    <fullName>Turny_Evo_Certificiations</fullName>
    <columns>Technician__c</columns>
    <columns>Dealership__c</columns>
    <columns>Dealership_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Certification_Status__c</columns>
    <columns>Date_Certified__c</columns>
    <columns>Date_Last_Certified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Certification__c.Turny_Evo_Service_Certification</value>
    </filters>
    <label>Turny Evo Service Certifications</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>